--- a/examples/Mac80211/omnetpp.ini
+++ b/examples/Mac80211/omnetpp.ini
@@ -128,18 +128,18 @@ sim.host[*].net.debug = false
 # debug switch
 sim.host[*].nic.mac.headerLength = 272
 sim.host[*].nic.mac.queueLength = 14
-sim.host[*].nic.mac.bitrate = 2E+6# in bits/second
+sim.host[*].nic.mac.bitrate = 2E+6bps# in bits/second
 sim.host[*].nic.mac.defaultChannel = 0
 sim.host[*].nic.mac.autoBitrate = false
 
 ### values if no fading is modelled, gives at most 1% packet error rate
-sim.host[*].nic.mac.snr2Mbit = 1.46  # [dBm]
-sim.host[*].nic.mac.snr5Mbit = 2.6  # [dBm]
-sim.host[*].nic.mac.snr11Mbit = 5.68  # [dBm]
+sim.host[*].nic.mac.snr2Mbit = 1.46dB  # [dB]
+sim.host[*].nic.mac.snr5Mbit = 2.6dB  # [dB]
+sim.host[*].nic.mac.snr11Mbit = 5.68dB  # [dB]
 
 sim.host[*].nic.mac.rtsCtsThreshold = 400
 sim.host[*].nic.mac.neighborhoodCacheSize = 30
-sim.host[*].nic.mac.neighborhoodCacheMaxAge = 100
+sim.host[*].nic.mac.neighborhoodCacheMaxAge = 100s  # [s]
 
 ##############################################################################
 #       Parameters for the radio
