--- a/.cproject
+++ b/.cproject
@@ -51,7 +51,7 @@
 </toolChain>
 </folderInfo>
 <sourceEntries>
-<entry excluding="modules/localization|configurator/|doc/|documentation/|out/|examples/baseNetwork/|examples/foxtrot/|examples/locNetwork/|examples/mfNetwork/|examples/multiChannel/|examples/positifNetwork/|modules/channel/|modules/phyOld/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
+<entry excluding="modules/localization|configurator/|doc/|documentation/|out/|examples/foxtrot/|examples/locNetwork/|examples/mfNetwork/|examples/multiChannel/|examples/positifNetwork/|modules/channel/|modules/phyOld/" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name=""/>
 </sourceEntries>
 </configuration>
 </storageModule>
@@ -353,6 +353,7 @@
 </cconfiguration>
 <cconfiguration id="org.omnetpp.cdt.gnu.config.release.233601168">
 <storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="org.omnetpp.cdt.gnu.config.release.233601168" moduleId="org.eclipse.cdt.core.settings" name="gcc-release">
+
 <macros>
 <stringMacro name="MIXIMBASE" type="VALUE_TEXT" value="."/>
 </macros>
