--- a/examples/CSMAMac/omnetpp.ini
+++ b/examples/CSMAMac/omnetpp.ini
@@ -10,9 +10,9 @@ network = phySim
 ##########################################################
 tkenv-default-config = 
 phySim.**.coreDebug = false
-phySim.playgroundSizeX = 300	
-phySim.playgroundSizeY = 400
-phySim.playgroundSizeZ = 300
+phySim.playgroundSizeX = 300m
+phySim.playgroundSizeY = 400m
+phySim.playgroundSizeZ = 300m
 phySim.numHosts = 3
 
 ##########################################################
