--- a/examples/Mac80211/omnetpp.ini
+++ b/examples/Mac80211/omnetpp.ini
@@ -22,9 +22,9 @@ cmdenv-module-messages = true
 #       Parameters for the entire simulation                                 #
 ##############################################################################
 
-sim.playgroundSizeX = 500
-sim.playgroundSizeY = 500
-sim.numHosts = 20
+sim.playgroundSizeX = 500m
+sim.playgroundSizeY = 500m
+sim.numHosts = 10
 
 # uncomment to enable debug messages for all modules
 # **.debug = 0
@@ -60,8 +60,8 @@ sim.channelcontrol.sendDirect = false
 sim.host[*].mobility.debug = false
 
 # if set to 0 the MN does not move
-sim.host[*].mobility.speed = 0
-sim.host[*].mobility.updateInterval = 0.5
+sim.host[*].mobility.speed = 0mps
+sim.host[*].mobility.updateInterval = 0.5s
 
 # starting position for the hosts "-1" means random staring point
 # starting position for the hosts "-1" means random staring point
@@ -108,13 +108,13 @@ sim.host[*].mobility.y = -1
 
 # debug switch
 sim.host[*].appl.debug = false
-sim.host[*].appl.headerLength = 1024
+sim.host[*].appl.headerLength = 1024bit
 sim.host[*].appl.burstSize = 3
 
 ##############################################################################
 #       Parameters for the Network Layer                                     #
 ##############################################################################
-sim.host[*].net.headerLength = 32# in bits
+sim.host[*].net.headerLength = 32bit# in bits
 sim.host[*].net.debug = false
 
 ##############################################################################
