--- a/examples/analogueModels/omnetpp.ini
+++ b/examples/analogueModels/omnetpp.ini
@@ -11,9 +11,9 @@ network = phySim
 #			Simulation parameters                        #
 ##########################################################
 phySim.**.coreDebug = false
-phySim.playgroundSizeX = 300	
-phySim.playgroundSizeY = 300
-phySim.playgroundSizeZ = 300
+phySim.playgroundSizeX = 300m
+phySim.playgroundSizeY = 300m
+phySim.playgroundSizeZ = 300m
 phySim.numHosts = 2
 
 ##########################################################
