--- a/examples/baseNetwork/omnetpp.ini
+++ b/examples/baseNetwork/omnetpp.ini
@@ -1,164 +1,117 @@
 [General]
-cmdenv-output-file = omnetpp.log
-debug-on-errors = 1
+cmdenv-config-name = perftest
+cmdenv-express-mode = true
+ned-path = ../../base;../../modules;../../examples;
 network = baseSim
-#random-seed = 13
-baseSim-time-limit = 50s
-
-#bitmap-path="../../bitmaps"
-# tkenv-default-run=1
-breakpoints-enabled = true
-
-# cmdenv-runs-to-execute = 1
-cmdenv-event-banners = false
-cmdenv-module-messages = true
-# verbose-snrSimulation = false
-# verbose-snrSimulation = true
 
 
+##########################################################
+#			Simulation parameters                        #
+##########################################################
+tkenv-default-config = 
+baseSim.**.coreDebug = false
+baseSim.playgroundSizeX = 300m
+baseSim.playgroundSizeY = 300m
+baseSim.playgroundSizeZ = 300m
+baseSim.numNodes = 3
 
-
-
-
-##############################################################################
-#       Parameters for the entire simulation                                 #
-##############################################################################
-baseSim.playgroundSizeX = 500
-baseSim.playgroundSizeY = 350
-baseSim.playgroundSizeZ = 0
-baseSim.numNodes = 10
-
-baseSim.numObjects = 0
-
+##########################################################
+#			WorldUtility parameters                      #
+##########################################################
 baseSim.world.useTorus = false
-baseSim.world.use2D = true
+baseSim.world.use2D = false
 
-# uncomment to enable debug messages for all modules
-**.debug = true
-**.coreDebug = true
-
-##############################################################################
-#       Parameters for the propagationmodel                                    #
-##############################################################################
-baseSim.propagationmodel.carrierFrequency = 868e+6
-
-# max transmission power [mW]
-baseSim.propagationmodel.pMax = 3
-# signal attenuation threshold [dBm]
-baseSim.propagationmodel.sat = -110
-# path loss coefficient alpha
-baseSim.propagationmodel.alpha = 3.5
-
-baseSim.propagationmodel.sendDirect = false
-baseSim.propagationmodel.useTorus = false
-
-baseSim.node[*].applType = "TestApplLayer"
-
-##############################################################################
-#       Parameters for the utility Module                                   #
-##############################################################################
-# starting position for the nodes "-1" means random staring point
-
-baseSim.node[0].mobility.x = 30
-baseSim.node[0].mobility.y = 75
-
-baseSim.node[1].mobility.x = 290
-baseSim.node[1].mobility.y = 160
-
-baseSim.node[2].mobility.x = 420
-baseSim.node[2].mobility.y = 120
-
-baseSim.node[3].mobility.x = 380
-baseSim.node[3].mobility.y = 30
-
-baseSim.node[4].mobility.x = 220
-baseSim.node[4].mobility.y = 60
-
-baseSim.node[5].mobility.x = 450
-baseSim.node[5].mobility.y = 320
-
-baseSim.node[6].mobility.x = 150
-baseSim.node[6].mobility.y = 155
-
-baseSim.node[7].mobility.x = 330
-baseSim.node[7].mobility.y = 280
-
-baseSim.node[8].mobility.x = 70
-baseSim.node[8].mobility.y = 257
-
-baseSim.node[9].mobility.x = 150
-baseSim.node[9].mobility.y = 300
-
-baseSim.node[*].mobility.x = -1
-baseSim.node[*].mobility.y = -1
-baseSim.node[*].mobility.z = 0
+##########################################################
+#			         channel parameters                  #
+##########################################################
+baseSim.connectionManager.sendDirect = false
+baseSim.connectionManager.pMax = 100mW
+baseSim.connectionManager.sat = -91dBm
+baseSim.connectionManager.alpha = 3.0
+baseSim.connectionManager.carrierFrequency = 2.412e+9Hz
 
 
-##############################################################################
-#       Parameters for the Host                                              #
-##############################################################################
+################ PhyLayer parameters #####################
+baseSim.node[*].nic.phy.usePropagationDelay = false
+baseSim.node[*].nic.phy.thermalNoise = -100dBm
+        
+baseSim.node[*].nic.phy.analogueModels = xmldoc("config.xml")
+baseSim.node[*].nic.phy.decider = xmldoc("config.xml")
 
-##############################################################################
-#       Parameters for the Application Layer                                 #
-##############################################################################
+baseSim.node[*].nic.phy.timeRXToTX = 0.00021s
+baseSim.node[*].nic.phy.timeRXToSleep = 0.000031s
 
-# debug switch
-baseSim.node[*].appl.debug = true
-baseSim.node[*].appl.headerLength = 12
-baseSim.node[*].appl.burstSize = 3
+baseSim.node[*].nic.phy.timeTXToRX = 0.00012s
+baseSim.node[*].nic.phy.timeTXToSleep = 0.000032s
 
+baseSim.node[*].nic.phy.timeSleepToRX = 0.000102s
+baseSim.node[*].nic.phy.timeSleepToTX = 0.000203s
 
-##############################################################################
-#       Parameters for the Network Layer                                     #
-##############################################################################
-baseSim.node[*].net.headerLength = 24
-baseSim.node[*].net.debug = true
-baseSim.node[*].net.coreDebug = true
-baseSim.node[*].net.stats = 0
+baseSim.node[*].nic.phy.sensitivity = -89dBm
+baseSim.node[*].nic.phy.maxTXPower = 100.0mW
 
-##############################################################################
-#       Parameters for ARP
-##############################################################################
-baseSim.node[*].arp.debug = true
+baseSim.node[*].nic.phy.initialRadioState = 0
 
-
-##############################################################################
-#       Parameters for the MAC Layer                                         #
-##############################################################################
-
-baseSim.node[*].nic.mac.debug = true
+################ MAC layer parameters ####################
 baseSim.node[*].nic.mac.queueLength = 5
 baseSim.node[*].nic.mac.headerLength = 24
+baseSim.node[*].nic.mac.slotDuration = 0.04s
+baseSim.node[*].nic.mac.difs = 0.0005s
+baseSim.node[*].nic.mac.maxTxAttempts = 14
 baseSim.node[*].nic.mac.defaultChannel = 0
-baseSim.node[*].nic.mac.bitrate = 15360
+baseSim.node[*].nic.mac.bitrate = 15360bps
+baseSim.node[*].nic.mac.contentionWindow = 20
+baseSim.node[*].nic.mac.txPower = 100mW  # [mW]
+
+################ NETW layer parameters ####################
+baseSim.node[*].net.isSwitch = false
+baseSim.node[*].net.maxTtl = 3
+baseSim.node[*].net.boredTime = 0.5
+
+################ Mobility parameters #####################
+
+baseSim.node[0].mobility.x = 150
+baseSim.node[0].mobility.y = 200
+baseSim.node[0].mobility.z = 100
+
+baseSim.node[1].mobility.x = 250
+baseSim.node[1].mobility.y = 100
+baseSim.node[1].mobility.z = 100
+
+baseSim.node[2].mobility.x = 250
+baseSim.node[2].mobility.y = 200
+baseSim.node[2].mobility.z = 100
+
+baseSim.node[3].mobility.x = 50
+baseSim.node[3].mobility.y = 100
+baseSim.node[3].mobility.z = 100
+
+baseSim.node[4].mobility.x = 150
+baseSim.node[4].mobility.y = 380
+baseSim.node[4].mobility.z = 100
+
+baseSim.node[5].mobility.x = 50
+baseSim.node[5].mobility.y = 400
+baseSim.node[5].mobility.z = 100
 
 
-##############################################################################
-#       Parameters for the radio
-##############################################################################
+baseSim.node[*].nic.phy.useThermalNoise = true
+baseSim.node[*].applType = "BurstApplLayer"
+baseSim.node[*].mobType = "ConstSpeedMobility"
+baseSim.node[*].netwType = "BaseNetwLayer"
+baseSim.node[*].appl.debug = false
+baseSim.node[*].appl.headerLength = 512bit
+baseSim.node[*].net.debug = false
+baseSim.node[*].net.stats = false
+baseSim.node[*].net.headerLength = 32bit
+baseSim.node[*].appl.burstSize = 3
+baseSim.node[*].mobility.debug = false
+baseSim.node[*].mobility.speed = 1mps
+baseSim.node[*].mobility.updateInterval = 0.1s
 
-baseSim.node[*].nic.radio.swSleep = 0
-baseSim.node[*].nic.radio.swSend = 0.001
-baseSim.node[*].nic.radio.swRecv = 0.003
-baseSim.node[*].nic.radio.debug = true
 
 
-##############################################################################
-#       Parameters for the Physical Layer                                    #
-##############################################################################
 
-# debug switch
-baseSim.node[*].nic.phy.debug = true
-baseSim.node[*].nic.phy.publishRSSIAlways = 0
-baseSim.node[*].nic.phy.headerLength = 16
-# transmission power [mW]
-baseSim.node[*].nic.phy.transmitterPower = 3
 
-baseSim.node[*].nic.phy.carrierFrequency = 868E+6
-baseSim.node[*].nic.phy.thermalNoise = -120
-baseSim.node[*].nic.phy.sensitivity = -110
-baseSim.node[*].nic.phy.pathLossAlpha = 3.5
-baseSim.node[*].nic.phy.bitrate = 1000
 
-baseSim.node[*].nic.decider.debug = true
-baseSim.node[*].nic.decider.snrThresholdLevel = 10#[dB]
+
