--- a/tests/basePhyLayer/omnetpp.ini
+++ b/tests/basePhyLayer/omnetpp.ini
@@ -20,9 +20,9 @@ tbpSim.channelcontrol.sat = -90dBm
 tbpSim.channelcontrol.alpha = 3
 tbpSim.channelcontrol.carrierFrequency = 868e+6Hz
 
-tbpSim.playgroundSizeX = 500
-tbpSim.playgroundSizeY = 500
-tbpSim.playgroundSizeZ = 500
+tbpSim.playgroundSizeX = 500m
+tbpSim.playgroundSizeY = 500m
+tbpSim.playgroundSizeZ = 500m
 tbpSim.numHosts = 1
 
 tbpSim.node[*].utility.coreDebug = false
