--- a/tests/blackboard/omnetpp.ini
+++ b/tests/blackboard/omnetpp.ini
@@ -14,9 +14,9 @@ cmdenv-express-mode = false
 ##############################################################################
 #       Parameters for the entire simulation                                 #
 ##############################################################################
-sim.playgroundSizeX = 200
-sim.playgroundSizeY = 100
-sim.playgroundSizeZ = 0
+sim.playgroundSizeX = 200m
+sim.playgroundSizeY = 100m
+sim.playgroundSizeZ = 0m
 sim.numHosts = 1
 **.debug = true
 **.coreDebug = true
