SensorApplLayer: added recordSimulationDuration bool parameter to record the simulation execution time (in seconds).

--- a/examples/WSNRouting/omnetpp.ini
+++ b/examples/WSNRouting/omnetpp.ini
@@ -106,6 +106,8 @@ repeat = 5
 
 **.node[*].nic.mac.txPower = ${txPower=0.1,1} mW
 
+**.node[0].app.recordSimulationDuration = true
+
 [Config convergecast]
 description="Wireless sensor network with typical convergecast traffic towards one sink (host 0) and dynamic routing."
 **.node[*].netwType = "WiseRoute"
