--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,22 @@
 *_m.h
 *_m.cc
+*.pdb
+*.idb
+*.ilk
+*.exe
+*.lib
 .pydevproject
 .settings
 .tstamp
 env.sh
+makefrag
+makefrag.vc
 **/Makefile
+Makefile.vc
+/*/Makefile.vc
+examples/*/Makefile.vc
+tests/*/Makefile.vc
+tests/*/*/Makefile.vc
 out
 doc/doxy
 doc/neddoc
