--- a/examples/analogueModels/omnetpp.ini
+++ b/examples/analogueModels/omnetpp.ini
@@ -10,7 +10,11 @@ network = AnalogueModels
 ##########################################################
 #			Simulation parameters                        #
 ##########################################################
-AnalogueModels.**.coreDebug = true
+**.coreDebug = true
+**.debug = true
+**.netwl.headerLength = 32bit
+**.appl.headerLength = 32bit
+**.mac.headerLength = 32bit
 AnalogueModels.playgroundSizeX = 300m
 AnalogueModels.playgroundSizeY = 300m
 AnalogueModels.playgroundSizeZ = 300m
