--- a/tests/nicTest/omnetpp.ini
+++ b/tests/nicTest/omnetpp.ini
@@ -11,20 +11,17 @@ network = org.mixim.tests.nicTest.NicTest
 *.playgroundSizeY = 500m
 *.playgroundSizeZ = 500m
 *.numHosts = 4
+**.coreDebug = false
 
 *.showPassed = true
-*.world.coreDebug = false
 *.world.useTorus = false
 *.world.use2D = true
-*.channelcontrol.coreDebug = true
-*.channelcontrol.sendDirect = false
-*.channelcontrol.pMax = 110.11mW
-*.channelcontrol.sat = -111dBm
-*.channelcontrol.alpha = 3.6
-*.channelcontrol.carrierFrequency = 2.4e9Hz
+*.connectionManager.sendDirect = false
+*.connectionManager.pMax = 110.11mW
+*.connectionManager.sat = -111dBm
+*.connectionManager.alpha = 3.6
+*.connectionManager.carrierFrequency = 2.4e9Hz
 
-*.node[*].utility.coreDebug = false
-*.node[*].mobility.coreDebug = false
 *.node[0].mobility.x = 250
 *.node[0].mobility.y = 200
 *.node[0].mobility.z = 250
@@ -37,7 +34,7 @@ network = org.mixim.tests.nicTest.NicTest
 *.node[3].mobility.x = 150
 *.node[3].mobility.y = 300
 *.node[3].mobility.z = 250
-*.node[*].arpHost.coreDebug = false
+*.node[*].netwl.headerLength = 32bit
 
 [Config Test1]
 description = "Unit Test runs for Nic80211"
