fixed some test difference checks, added StationaryMobility, renamed mobility coordinates from (x, y, z) into (initialX, initialY, initialZ) with meter unit and use the 1m/0 construct for random generation (instead of -1). The mobility classes now contains also a constraint area to reduce the random area of positioning.

--- a/examples/BaseMoBANNetwork/example1.ini
+++ b/examples/BaseMoBANNetwork/example1.ini
@@ -38,8 +38,8 @@ BaseMoBANNetwork.node[*].mobility.coordinatorIndex = 0
 
 
 ################ Mobility parameters #####################
-BaseMoBANNetwork.node[*].mobility.x = 20
-BaseMoBANNetwork.node[*].mobility.y = 20
-BaseMoBANNetwork.node[*].mobility.z = 4
+BaseMoBANNetwork.node[*].mobility.initialX = 20m
+BaseMoBANNetwork.node[*].mobility.initialY = 20m
+BaseMoBANNetwork.node[*].mobility.initialZ = 4m
 
 
