--- a/examples/BaseMoBANNetwork/example2.ini
+++ b/examples/BaseMoBANNetwork/example2.ini
@@ -45,88 +45,88 @@ BaseMoBANNetwork.node[32..43].mobility.coordinatorIndex = 1
 
 ################ Mobility parameters #####################
 
-BaseMoBANNetwork.node[0].mobility.x = 5
-BaseMoBANNetwork.node[0].mobility.y = 5
-BaseMoBANNetwork.node[0].mobility.z = 4
+BaseMoBANNetwork.node[0].mobility.initialX = 5m
+BaseMoBANNetwork.node[0].mobility.initialY = 5m
+BaseMoBANNetwork.node[0].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[1].mobility.x = 12
-BaseMoBANNetwork.node[1].mobility.y = 10
-BaseMoBANNetwork.node[1].mobility.z = 4
+BaseMoBANNetwork.node[1].mobility.initialX = 12m
+BaseMoBANNetwork.node[1].mobility.initialY = 10m
+BaseMoBANNetwork.node[1].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[2].mobility.x = 20
-BaseMoBANNetwork.node[2].mobility.y = 5
-BaseMoBANNetwork.node[2].mobility.z = 4
+BaseMoBANNetwork.node[2].mobility.initialX = 20m
+BaseMoBANNetwork.node[2].mobility.initialY = 5m
+BaseMoBANNetwork.node[2].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[3].mobility.x = 30
-BaseMoBANNetwork.node[3].mobility.y = 8
-BaseMoBANNetwork.node[3].mobility.z = 4
+BaseMoBANNetwork.node[3].mobility.initialX = 30m
+BaseMoBANNetwork.node[3].mobility.initialY = 8m
+BaseMoBANNetwork.node[3].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[4].mobility.x = 40
-BaseMoBANNetwork.node[4].mobility.y = 3
-BaseMoBANNetwork.node[4].mobility.z = 4
+BaseMoBANNetwork.node[4].mobility.initialX = 40m
+BaseMoBANNetwork.node[4].mobility.initialY = 3m
+BaseMoBANNetwork.node[4].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[5].mobility.x = 6
-BaseMoBANNetwork.node[5].mobility.y = 18
-BaseMoBANNetwork.node[5].mobility.z = 4
+BaseMoBANNetwork.node[5].mobility.initialX = 6m
+BaseMoBANNetwork.node[5].mobility.initialY = 18m
+BaseMoBANNetwork.node[5].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[6].mobility.x = 15
-BaseMoBANNetwork.node[6].mobility.y = 15
-BaseMoBANNetwork.node[6].mobility.z = 4
+BaseMoBANNetwork.node[6].mobility.initialX = 15m
+BaseMoBANNetwork.node[6].mobility.initialY = 15m
+BaseMoBANNetwork.node[6].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[7].mobility.x = 20
-BaseMoBANNetwork.node[7].mobility.y = 8
-BaseMoBANNetwork.node[7].mobility.z = 4
+BaseMoBANNetwork.node[7].mobility.initialX = 20m
+BaseMoBANNetwork.node[7].mobility.initialY = 8m
+BaseMoBANNetwork.node[7].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[8].mobility.x = 35
-BaseMoBANNetwork.node[8].mobility.y = 20
-BaseMoBANNetwork.node[8].mobility.z = 4
+BaseMoBANNetwork.node[8].mobility.initialX = 35m
+BaseMoBANNetwork.node[8].mobility.initialY = 20m
+BaseMoBANNetwork.node[8].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[9].mobility.x = 45
-BaseMoBANNetwork.node[9].mobility.y = 15
-BaseMoBANNetwork.node[9].mobility.z = 4
+BaseMoBANNetwork.node[9].mobility.initialX = 45m
+BaseMoBANNetwork.node[9].mobility.initialY = 15m
+BaseMoBANNetwork.node[9].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[10].mobility.x = 40
-BaseMoBANNetwork.node[10].mobility.y = 25
-BaseMoBANNetwork.node[10].mobility.z = 4
+BaseMoBANNetwork.node[10].mobility.initialX = 40m
+BaseMoBANNetwork.node[10].mobility.initialY = 25m
+BaseMoBANNetwork.node[10].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[11].mobility.x = 16
-BaseMoBANNetwork.node[11].mobility.y = 25
-BaseMoBANNetwork.node[11].mobility.z = 4
+BaseMoBANNetwork.node[11].mobility.initialX = 16m
+BaseMoBANNetwork.node[11].mobility.initialY = 25m
+BaseMoBANNetwork.node[11].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[12].mobility.x = 24
-BaseMoBANNetwork.node[12].mobility.y = 35
-BaseMoBANNetwork.node[12].mobility.z = 4
+BaseMoBANNetwork.node[12].mobility.initialX = 24m
+BaseMoBANNetwork.node[12].mobility.initialY = 35m
+BaseMoBANNetwork.node[12].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[13].mobility.x = 35
-BaseMoBANNetwork.node[13].mobility.y = 32
-BaseMoBANNetwork.node[13].mobility.z = 4
+BaseMoBANNetwork.node[13].mobility.initialX = 35m
+BaseMoBANNetwork.node[13].mobility.initialY = 32m
+BaseMoBANNetwork.node[13].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[14].mobility.x = 35
-BaseMoBANNetwork.node[14].mobility.y = 28
-BaseMoBANNetwork.node[14].mobility.z = 4
+BaseMoBANNetwork.node[14].mobility.initialX = 35m
+BaseMoBANNetwork.node[14].mobility.initialY = 28m
+BaseMoBANNetwork.node[14].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[15].mobility.x = 45
-BaseMoBANNetwork.node[15].mobility.y = 40
-BaseMoBANNetwork.node[15].mobility.z = 4
+BaseMoBANNetwork.node[15].mobility.initialX = 45m
+BaseMoBANNetwork.node[15].mobility.initialY = 40m
+BaseMoBANNetwork.node[15].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[16].mobility.x = 2
-BaseMoBANNetwork.node[16].mobility.y = 45
-BaseMoBANNetwork.node[16].mobility.z = 4
+BaseMoBANNetwork.node[16].mobility.initialX = 2m
+BaseMoBANNetwork.node[16].mobility.initialY = 45m
+BaseMoBANNetwork.node[16].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[17].mobility.x = 10
-BaseMoBANNetwork.node[17].mobility.y = 40
-BaseMoBANNetwork.node[17].mobility.z = 4
+BaseMoBANNetwork.node[17].mobility.initialX = 10m
+BaseMoBANNetwork.node[17].mobility.initialY = 40m
+BaseMoBANNetwork.node[17].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[18].mobility.x = 23
-BaseMoBANNetwork.node[18].mobility.y = 45
-BaseMoBANNetwork.node[18].mobility.z = 4
+BaseMoBANNetwork.node[18].mobility.initialX = 23m
+BaseMoBANNetwork.node[18].mobility.initialY = 45m
+BaseMoBANNetwork.node[18].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[19].mobility.x = 37
-BaseMoBANNetwork.node[19].mobility.y = 43
-BaseMoBANNetwork.node[19].mobility.z = 4
+BaseMoBANNetwork.node[19].mobility.initialX = 37m
+BaseMoBANNetwork.node[19].mobility.initialY = 43m
+BaseMoBANNetwork.node[19].mobility.initialZ = 4m
 
-BaseMoBANNetwork.node[*].mobility.x = 20
-BaseMoBANNetwork.node[*].mobility.y = 20
-BaseMoBANNetwork.node[*].mobility.z = 4
+BaseMoBANNetwork.node[*].mobility.initialX = 20m
+BaseMoBANNetwork.node[*].mobility.initialY = 20m
+BaseMoBANNetwork.node[*].mobility.initialZ = 4m
 
 
