--- a/examples/ieee802154a/omnetpp.ini
+++ b/examples/ieee802154a/omnetpp.ini
@@ -82,18 +82,20 @@ ieee802154a.node[*].appl.trace = false
 ieee802154a.node[*].appl.payloadSize = 8 byte
 
 ## Nodes positions
-ieee802154a.node[0].mobility.x = 0
-ieee802154a.node[0].mobility.y = 0
-ieee802154a.node[0].mobility.z = 0
-ieee802154a.node[1].mobility.y = 0
-ieee802154a.node[1].mobility.z = 0
+**.node[*].mobility.initFromDisplayString = false
+
+ieee802154a.node[0].mobility.initialX = 0m
+ieee802154a.node[0].mobility.initialY = 0m
+ieee802154a.node[0].mobility.initialZ = 0m
+ieee802154a.node[1].mobility.initialY = 0m
+ieee802154a.node[1].mobility.initialZ = 0m
 
 [Config BERDistance]
 description = "Evaluates the bit error rate as a function of distance with various channel models."
 ieee802154a.node[1].appl.payloadSize = 8 byte
 ieee802154a.node[*].appl.dstAddr = 0
 **.numHosts = 2
-ieee802154a.node[1].mobility.x = ${distance=1..10 step 1, 25..100 step 25}
+ieee802154a.node[1].mobility.initialX = ${distance=1..10 step 1, 25..100 step 25}m
 ieee802154a.node[0].appl.nbPackets = 0
 ieee802154a.node[1].appl.nbPackets = ${nbPackets=250}
 ieee802154a.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos}.xml")
@@ -104,7 +106,7 @@ description = "Sends one packet per channel and traces all points at reception."
 ieee802154a.node[*].appl.dstAddr = 0
 **.numHosts = 2
 ieee802154a.node[1].appl.payloadSize = ${packetSize=120} byte
-ieee802154a.node[1].mobility.x = ${distance=10}
+ieee802154a.node[1].mobility.initialX = ${distance=10}m
 ieee802154a.node[1].appl.nbPackets = ${nbPackets=1}
 ieee802154a.node[0].appl.nbPackets = 0
 sim-time-limit=10 s
