--- a/tests/power/Nic80211Test/omnetpp.ini
+++ b/tests/power/Nic80211Test/omnetpp.ini
@@ -65,12 +65,11 @@ sim.host[*].mobility.debug = false
 # if set to 0 the MN does not move
 sim.host[*].mobility.speed = 0
 sim.host[*].mobility.updateInterval = 0.1s
-
-# starting position for the hosts "-1" means random staring point
-# starting position for the hosts "-1" means random staring point
-
-sim.host[*].mobility.y = -1
-sim.host[*].mobility.x = -1	
+sim.host[*].mobility.initFromDisplayString = false
+sim.host[*].mobility.constraintAreaMinX = 0m
+sim.host[*].mobility.constraintAreaMinY = 0m
+sim.host[*].mobility.constraintAreaMaxX = 500m
+sim.host[*].mobility.constraintAreaMaxY = 500m
 
 
 ##############################################################################
@@ -168,7 +167,7 @@ sim.host[*].nic.setupRxCurrent = 0mA # no radio switching times
 sim.host[*].nic.setupTxCurrent = 0mA # no radio switching times
 
 sim.world.playgroundSizeZ = 0m
-sim.host[*].mobility.z = 0
+sim.host[*].mobility.initialZ = 0m
 sim.host[*].net.stats = false
 sim.host[*].nic.mac.txPower = 110.11mW 
 sim.host[*].nic.phy.usePropagationDelay = false 
@@ -194,10 +193,10 @@ sim.host[*].nic.phy.initialRadioState = 0
 [Config One]
 output-vector-file = omnetpp_1.vec
 sim.numHosts = 2
-sim.host[0].mobility.y = 100
-sim.host[0].mobility.x = 100	
-sim.host[1].mobility.y = 150
-sim.host[1].mobility.x = 100	
+sim.host[0].mobility.initialY = 100m
+sim.host[0].mobility.initialX = 100m	
+sim.host[1].mobility.initialY = 150m
+sim.host[1].mobility.initialX = 100m	
 sim.host[*].appl.burstSize = 1
 sim-time-limit = 10s
 
@@ -205,10 +204,10 @@ sim-time-limit = 10s
 [Config Two]
 output-vector-file = omnetpp_2.vec
 sim.numHosts = 2
-sim.host[0].mobility.y = 100
-sim.host[0].mobility.x = 100	
-sim.host[1].mobility.y = 400
-sim.host[1].mobility.x = 400	
+sim.host[0].mobility.initialY = 100m
+sim.host[0].mobility.initialX = 100m	
+sim.host[1].mobility.initialY = 400m
+sim.host[1].mobility.initialX = 400m	
 sim.host[*].appl.burstSize = 1
 sim-time-limit = 10s
 
@@ -216,10 +215,10 @@ sim-time-limit = 10s
 [Config Three]
 output-vector-file = omnetpp_3.vec
 sim.numHosts = 2
-sim.host[0].mobility.y = 100
-sim.host[0].mobility.x = 100	
-sim.host[1].mobility.y = 350
-sim.host[1].mobility.x = 100
+sim.host[0].mobility.initialY = 100m
+sim.host[0].mobility.initialX = 100m	
+sim.host[1].mobility.initialY = 350m
+sim.host[1].mobility.initialX = 100m
 sim.host[*].appl.burstSize = 1
 sim-time-limit = 10s
 
@@ -228,12 +227,12 @@ sim-time-limit = 10s
 [Config Four]
 output-vector-file = omnetpp_4.vec
 sim.numHosts = 3
-sim.host[0].mobility.y = 100
-sim.host[0].mobility.x = 100	
-sim.host[1].mobility.y = 150
-sim.host[1].mobility.x = 100	
-sim.host[2].mobility.y = 100
-sim.host[2].mobility.x = 150
+sim.host[0].mobility.initialY = 100m
+sim.host[0].mobility.initialX = 100m	
+sim.host[1].mobility.initialY = 150m
+sim.host[1].mobility.initialX = 100m	
+sim.host[2].mobility.initialY = 100m
+sim.host[2].mobility.initialX = 150m
 sim.host[*].appl.debug = true
 sim.host[*].appl.burstSize = 100
 sim.host[*].nic.mac.queueLength = 301
@@ -252,12 +251,12 @@ sim-time-limit = 10s
 [Config Five]
 output-vector-file = omnetpp_5.vec
 sim.numHosts = 3
-sim.host[0].mobility.y = 100
-sim.host[0].mobility.x = 100	
-sim.host[1].mobility.y = 150
-sim.host[1].mobility.x = 100	
-sim.host[2].mobility.y = 100
-sim.host[2].mobility.x = 150
+sim.host[0].mobility.initialY = 100m
+sim.host[0].mobility.initialX = 100m	
+sim.host[1].mobility.initialY = 150m
+sim.host[1].mobility.initialX = 100m	
+sim.host[2].mobility.initialY = 100m
+sim.host[2].mobility.initialX = 150m
 sim.host[*].appl.debug = true
 sim.host[*].appl.burstSize = 100
 sim.host[*].nic.mac.queueLength = 301
@@ -273,12 +272,12 @@ sim-time-limit = 10s
 [Config Six]
 output-vector-file = omnetpp_6.vec
 sim.numHosts = 3
-sim.host[0].mobility.y = 100
-sim.host[0].mobility.x = 100	
-sim.host[1].mobility.y = 150
-sim.host[1].mobility.x = 100	
-sim.host[2].mobility.y = 100
-sim.host[2].mobility.x = 150
+sim.host[0].mobility.initialY = 100m
+sim.host[0].mobility.initialX = 100m	
+sim.host[1].mobility.initialY = 150m
+sim.host[1].mobility.initialX = 100m	
+sim.host[2].mobility.initialY = 100m
+sim.host[2].mobility.initialX = 150m
 sim.host[*].appl.debug = true
 sim.host[*].appl.burstSize = 100
 sim.host[*].nic.mac.queueLength = 301
@@ -294,12 +293,12 @@ sim-time-limit = 10s
 
 output-vector-file = omnetpp_7.vec
 sim.numHosts = 3
-sim.host[0].mobility.y = 100
-sim.host[0].mobility.x = 100	
-sim.host[1].mobility.y = 150
-sim.host[1].mobility.x = 100	
-sim.host[2].mobility.y = 100
-sim.host[2].mobility.x = 150
+sim.host[0].mobility.initialY = 100m
+sim.host[0].mobility.initialX = 100m	
+sim.host[1].mobility.initialY = 150m
+sim.host[1].mobility.initialX = 100m	
+sim.host[2].mobility.initialY = 100m
+sim.host[2].mobility.initialX = 150m
 sim.host[*].appl.debug = true
 sim.host[*].appl.burstSize = 1
 sim.host[*].nic.mac.queueLength = 301
