--- a/examples/baseNetwork/omnetpp.ini
+++ b/examples/baseNetwork/omnetpp.ini
@@ -70,29 +70,29 @@ BaseNetwork.node[*].nic.mac.aTurnaroundTime = 0.000215s
 
 ################ Mobility parameters #####################
 
-BaseNetwork.node[0].mobility.x = 150
-BaseNetwork.node[0].mobility.y = 200
-BaseNetwork.node[0].mobility.z = 250
+BaseNetwork.node[0].mobility.initialX = 150m
+BaseNetwork.node[0].mobility.initialY = 200m
+BaseNetwork.node[0].mobility.initialZ = 250m
 
-BaseNetwork.node[1].mobility.x = 250
-BaseNetwork.node[1].mobility.y = 100
-BaseNetwork.node[1].mobility.z = 100
+BaseNetwork.node[1].mobility.initialX = 250m
+BaseNetwork.node[1].mobility.initialY = 100m
+BaseNetwork.node[1].mobility.initialZ = 100m
 
-BaseNetwork.node[2].mobility.x = 250
-BaseNetwork.node[2].mobility.y = 200
-BaseNetwork.node[2].mobility.z = 200
+BaseNetwork.node[2].mobility.initialX = 250m
+BaseNetwork.node[2].mobility.initialY = 200m
+BaseNetwork.node[2].mobility.initialZ = 200m
 
-BaseNetwork.node[3].mobility.x = 50
-BaseNetwork.node[3].mobility.y = 100
-BaseNetwork.node[3].mobility.z = 110
+BaseNetwork.node[3].mobility.initialX = 50m
+BaseNetwork.node[3].mobility.initialY = 100m
+BaseNetwork.node[3].mobility.initialZ = 110m
 
-BaseNetwork.node[4].mobility.x = 150
-BaseNetwork.node[4].mobility.y = 180
-BaseNetwork.node[4].mobility.z = 100
+BaseNetwork.node[4].mobility.initialX = 150m
+BaseNetwork.node[4].mobility.initialY = 180m
+BaseNetwork.node[4].mobility.initialZ = 100m
 
-BaseNetwork.node[5].mobility.x = 50
-BaseNetwork.node[5].mobility.y = 200
-BaseNetwork.node[5].mobility.z = 10
+BaseNetwork.node[5].mobility.initialX = 50m
+BaseNetwork.node[5].mobility.initialY = 200m
+BaseNetwork.node[5].mobility.initialZ = 10m
 
 
 BaseNetwork.node[*].applicationType = "BurstApplLayer"
@@ -102,8 +102,15 @@ BaseNetwork.node[*].appl.burstSize = 3
 
 BaseNetwork.node[*].mobilityType = "ConstSpeedMobility"
 BaseNetwork.node[*].mobility.debug = false
+BaseNetwork.node[*].mobility.initFromDisplayString = false
 BaseNetwork.node[*].mobility.speed = 1mps
 BaseNetwork.node[*].mobility.updateInterval = 0.1s
+BaseNetwork.node[*].mobility.constraintAreaMinX = 0m
+BaseNetwork.node[*].mobility.constraintAreaMinY = 0m
+BaseNetwork.node[*].mobility.constraintAreaMinZ = 0m
+BaseNetwork.node[*].mobility.constraintAreaMaxX = 300m
+BaseNetwork.node[*].mobility.constraintAreaMaxY = 300m
+BaseNetwork.node[*].mobility.constraintAreaMaxZ = 300m
 
 BaseNetwork.node[*].networkType = "BaseNetwLayer"
 BaseNetwork.node[*].netwl.debug = false
