--- a/examples/ieee802154Narrow/omnetpp.ini
+++ b/examples/ieee802154Narrow/omnetpp.ini
@@ -17,8 +17,8 @@ sim-time-limit = 100s
 tkenv-default-config = 
 ieee802154Narrow.**.coreDebug = false
 ieee802154Narrow.**.debug = false
-ieee802154Narrow.playgroundSizeX = 100m
-ieee802154Narrow.playgroundSizeY = 100m
+ieee802154Narrow.playgroundSizeX = 500m
+ieee802154Narrow.playgroundSizeY = 500m
 ieee802154Narrow.playgroundSizeZ = 300m
 ieee802154Narrow.numHosts = 3
 
@@ -54,17 +54,19 @@ ieee802154Narrow.node[*].nic.mac.notAffectedByHostState = true
 
 ################ Mobility parameters #####################
 
-ieee802154Narrow.node[0].mobility.x = 200
-ieee802154Narrow.node[0].mobility.y = 300
-ieee802154Narrow.node[0].mobility.z = 100
+**.node[*].mobility.initFromDisplayString = false
 
-ieee802154Narrow.node[1].mobility.x = 300	
-ieee802154Narrow.node[1].mobility.y = 300
-ieee802154Narrow.node[1].mobility.z = 100
+ieee802154Narrow.node[0].mobility.initialX = 200m
+ieee802154Narrow.node[0].mobility.initialY = 300m
+ieee802154Narrow.node[0].mobility.initialZ = 100m
 
-ieee802154Narrow.node[2].mobility.x = 400
-ieee802154Narrow.node[2].mobility.y = 300
-ieee802154Narrow.node[2].mobility.z = 100
+ieee802154Narrow.node[1].mobility.initialX = 300m	
+ieee802154Narrow.node[1].mobility.initialY = 300m
+ieee802154Narrow.node[1].mobility.initialZ = 100m
+
+ieee802154Narrow.node[2].mobility.initialX = 400m
+ieee802154Narrow.node[2].mobility.initialY = 300m
+ieee802154Narrow.node[2].mobility.initialZ = 100m
 
 ieee802154Narrow.node[*].netwl.headerLength = 16bit
 ieee802154Narrow.node[*].netwl.packetLength = 24880bit
@@ -102,9 +104,9 @@ description = "increasing number of hosts, unbursted, with queue"
 ieee802154Narrow.playgroundSizeX = 10m
 ieee802154Narrow.playgroundSizeY = 10m
 ieee802154Narrow.numHosts = ${2..40 step 2}
-ieee802154Narrow.node[*].mobility.x = -1
-ieee802154Narrow.node[*].mobility.y = -1
-ieee802154Narrow.node[*].mobility.z = -1
+ieee802154Narrow.node[*].mobility.initialX = 1m/0
+ieee802154Narrow.node[*].mobility.initialY = 1m/0
+ieee802154Narrow.node[*].mobility.initialZ = 1m/0
 **.netwl.packetsPerPacketTime = 0.1
 
 [Config Test1-B]
@@ -112,9 +114,9 @@ description = "increasing send rate per host, unbursted, with queue"
 ieee802154Narrow.playgroundSizeX = 10m
 ieee802154Narrow.playgroundSizeY = 10m
 ieee802154Narrow.numHosts = 10
-ieee802154Narrow.node[*].mobility.x = -1
-ieee802154Narrow.node[*].mobility.y = -1
-ieee802154Narrow.node[*].mobility.z = -1
+ieee802154Narrow.node[*].mobility.initialX = 1m/0
+ieee802154Narrow.node[*].mobility.initialY = 1m/0
+ieee802154Narrow.node[*].mobility.initialZ = 1m/0
 **.netwl.packetsPerPacketTime = ${0.02..0.4 step 0.02}
 **.netwl.burstSize = 1
 **.mac.queueLength = 100
@@ -152,10 +154,10 @@ sim-time-limit = 300s
 ieee802154Narrow.playgroundSizeX = 500m
 ieee802154Narrow.playgroundSizeY = 500m
 ieee802154Narrow.numHosts = 2
-ieee802154Narrow.node[0].mobility.x = 350
-ieee802154Narrow.node[0].mobility.y = 250
-ieee802154Narrow.node[1].mobility.x = 350 - ${dist=110..300 step 5}#${dist=40..160 step 40, 180..220 step 2, 230,240}
-ieee802154Narrow.node[1].mobility.y = 250
+ieee802154Narrow.node[0].mobility.initialX = 350m
+ieee802154Narrow.node[0].mobility.initialY = 250m
+ieee802154Narrow.node[1].mobility.initialX = 350m - ${dist=110..300 step 5}m #${dist=40..160 step 40, 180..220 step 2, 230,240}m
+ieee802154Narrow.node[1].mobility.initialY = 250m
 
 ieee802154Narrow.node[0].netwl.burstSize = 0
 ieee802154Narrow.node[1].netwl.burstSize = 1
@@ -178,8 +180,8 @@ description = "one sending host stationary in range of sink (hidden station), \
 			   with mac ACKS"
 ieee802154Narrow.numHosts = 3
 **.netwl.packetsPerPacketTime = 0.125
-ieee802154Narrow.node[2].mobility.x = 480
-ieee802154Narrow.node[2].mobility.y = 250
+ieee802154Narrow.node[2].mobility.initialX = 480m
+ieee802154Narrow.node[2].mobility.initialY = 250m
 ieee802154Narrow.node[2].netwl.burstSize = 1
 ieee802154Narrow.node[2].netwl.destination = 13
 ieee802154Narrow.node[1].netwl.destination = 13
@@ -199,9 +201,9 @@ sim-time-limit = ${numHosts}s
 ieee802154Narrow.playgroundSizeX = 10m
 ieee802154Narrow.playgroundSizeY = 10m
 ieee802154Narrow.numHosts = ${numHosts=2,4,8,16,32,64,128,256}
-ieee802154Narrow.node[*].mobility.x = -1
-ieee802154Narrow.node[*].mobility.y = -1
-ieee802154Narrow.node[*].mobility.z = -1
+ieee802154Narrow.node[*].mobility.initialX = 1m/0
+ieee802154Narrow.node[*].mobility.initialY = 1m/0
+ieee802154Narrow.node[*].mobility.initialZ = 1m/0
 **.netwl.packetsPerPacketTime = 1/${numHosts}
 ieee802154Narrow.node[*].nic.mac.macMinBE = 1
 ieee802154Narrow.node[*].nic.mac.macMaxBE = 8
