--- a/tests/baseMobility/omnetpp.ini
+++ b/tests/baseMobility/omnetpp.ini
@@ -15,28 +15,10 @@ bmSim.playgroundSizeY = 120m
 bmSim.playgroundSizeZ = 120m
 # bmSim.numHosts = 1
 
-
-
-
 **.coreDebug = false
-
-
-
 ##############################################################################
 #       Parameters for the Host                                              #
 ##############################################################################
-
-# bmSim.node[*].mobility.x = 0
-# bmSim.node[*].mobility.y = 0
-# bmSim.node[*].mobility.z = 0
-
-
-
-
-
-
-
-
 
 ###############################################################################
 #                 Configuration for Run 1                                     #
@@ -48,16 +30,16 @@ bmSim.world.use2D = false
 # bmSim.playgroundSizeZ = 120
 bmSim.numHosts = 1
 
-bmSim.node[0].mobility.x = 60
-bmSim.node[0].mobility.y = 60
-bmSim.node[0].mobility.z = 60
+bmSim.node[0].mobility.initialX = 60m
+bmSim.node[0].mobility.initialY = 60m
+bmSim.node[0].mobility.initialZ = 60m
 bmSim.node[0].borderPolicy = 1
 
-bmSim.node[0].mobility.outX = 150
-bmSim.node[0].mobility.outY = 150
-bmSim.node[0].mobility.outZ = 150
+bmSim.node[0].mobility.outX = 150m
+bmSim.node[0].mobility.outY = 150m
+bmSim.node[0].mobility.outZ = 150m
 
-bmSim.node2[0].mobility.debug = false
+bmSim.node2[0].mobility.coreDebug = false
 bmSim.node2[0].mobility.updateInterval = 0.5
 bmSim.node2[0].mobility.speed = 20.0
 bmSim.node2[0].borderPolicy = 1
