--- a/tests/basePhyLayer/omnetpp.ini
+++ b/tests/basePhyLayer/omnetpp.ini
@@ -1,5 +1,6 @@
 [General]
 ned-path = ../../src;..
+user-interface = Cmdenv
 network = tbpSim
 cmdenv-express-mode = false
 
@@ -42,9 +43,11 @@ tbpSim.node[*].nic.phy.timeSleepToRX = 3.0s
 tbpSim.node[*].nic.phy.timeSleepToTX = 3.5s
 tbpSim.node[*].nic.phy.initialRadioState = 2
 
-tbpSim.node[*].mobility.x = 100
-tbpSim.node[*].mobility.y = 100
-tbpSim.node[*].mobility.z = 100
+tbpSim.node[*].mobility.initFromDisplayString = false
+tbpSim.node[*].mobility.initialX = 100m
+tbpSim.node[*].mobility.initialY = 100m
+tbpSim.node[*].mobility.initialZ = 100m
+tbpSim.node[*].mobility.coreDebug = false
 
 [Config Test1]
 tbpSim.run = ${1,2}
