--- a/tests/nicTest/omnetpp.ini
+++ b/tests/nicTest/omnetpp.ini
@@ -22,18 +22,22 @@ network = org.mixim.tests.nicTest.NicTest
 *.connectionManager.alpha = 3.6
 *.connectionManager.carrierFrequency = 2.4e9Hz
 
-*.node[0].mobility.x = 250
-*.node[0].mobility.y = 200
-*.node[0].mobility.z = 250
-*.node[1].mobility.x = 150
-*.node[1].mobility.y = 200
-*.node[1].mobility.z = 250
-*.node[2].mobility.x = 250
-*.node[2].mobility.y = 300
-*.node[2].mobility.z = 250
-*.node[3].mobility.x = 150
-*.node[3].mobility.y = 300
-*.node[3].mobility.z = 250
+*.node[*].utility.coreDebug = false
+*.node[*].mobility.coreDebug = false
+*.node[*].mobility.initFromDisplayString = false
+*.node[*].mobility.initialZ = 0m
+*.node[0].mobility.initialX = 250m
+*.node[0].mobility.initialY = 200m
+*.node[0].mobility.initialZ = 250m
+*.node[1].mobility.initialX = 150m
+*.node[1].mobility.initialY = 200m
+*.node[1].mobility.initialZ = 250m
+*.node[2].mobility.initialX = 250m
+*.node[2].mobility.initialY = 300m
+*.node[2].mobility.initialZ = 250m
+*.node[3].mobility.initialX = 150m
+*.node[3].mobility.initialY = 300m
+*.node[3].mobility.initialZ = 250m
 *.node[*].netwl.headerLength = 32bit
 
 [Config Test1]
@@ -61,23 +65,23 @@ description = "Unit Test runs for Nic80211"
 [Config Nic80211MCSimuTests]
 description = "Simulation test runs for Nic80211MultiChannel"
 extends = Test1
-*.node[0].mobility.x = 50
-*.node[0].mobility.y = 50
-*.node[0].mobility.z = 250
-*.node[1].mobility.x = 250
-*.node[1].mobility.y = 50
-*.node[1].mobility.z = 250
-*.node[2].mobility.x = 250
-*.node[2].mobility.z = 250
-*.node[3].mobility.x = 450
-*.node[3].mobility.z = 250
+*.node[0].mobility.initialX = 50m
+*.node[0].mobility.initialY = 50m
+*.node[0].mobility.initialZ = 250m
+*.node[1].mobility.initialX = 250m
+*.node[1].mobility.initialY = 50m
+*.node[1].mobility.initialZ = 250m
+*.node[2].mobility.initialX = 250m
+*.node[2].mobility.initialZ = 250m
+*.node[3].mobility.initialX = 450m
+*.node[3].mobility.initialZ = 250m
 
 [Config Test2]
 description = "Simulation test run: two non interfering communicating pairs on same channel"
 extends = Nic80211MCSimuTests
 *.run = 2
-*.node[2].mobility.y = 450
-*.node[3].mobility.y = 450
+*.node[2].mobility.initialY = 450m
+*.node[3].mobility.initialY = 450m
 
 [Config Test3]
 description = "Simulation test run: two non interfering communicating pairs on different channel"
@@ -87,15 +91,15 @@ extends = Nic80211MCSimuTests
 *.node[3].nic.mac.defaultChannel = 2
 *.node[2].nic.phy.initialRadioChannel = 2
 *.node[3].nic.phy.initialRadioChannel = 2
-*.node[2].mobility.y = 450
-*.node[3].mobility.y = 450
+*.node[2].mobility.initialY = 450m
+*.node[3].mobility.initialY = 450m
 
 [Config Test4]
 description = "Simulation test run: two interfering communicating pairs on same channel"
 extends = Nic80211MCSimuTests
 *.run = 4
-*.node[2].mobility.y = 50
-*.node[3].mobility.y = 50
+*.node[2].mobility.initialY = 50m
+*.node[3].mobility.initialY = 50m
 
 [Config Test5]
 description = "Simulation test run: two interfering communicating pairs on different channel"
@@ -105,5 +109,5 @@ extends = Nic80211MCSimuTests
 *.node[3].nic.mac.defaultChannel = 2
 *.node[2].nic.phy.initialRadioChannel = 2
 *.node[3].nic.phy.initialRadioChannel = 2
-*.node[2].mobility.y = 50
-*.node[3].mobility.y = 50
+*.node[2].mobility.initialY = 50m
+*.node[3].mobility.initialY = 50m
