fixed the example/test-combine case and script usage, also removed timing info for PASSED/FAILED message for a better compare

--- a/tests/basePhyLayer/omnetpp.ini
+++ b/tests/basePhyLayer/omnetpp.ini
@@ -4,68 +4,69 @@ user-interface = Cmdenv
 network = tbpSim
 cmdenv-express-mode = false
 
-tbpSim.node[*].nic.phy.thermalNoise = 1dBm
-tbpSim.node[*].nic.phy.useThermalNoise = true
-tbpSim.**.coreDebug = false
-tbpSim.world.useTorus = false
-tbpSim.run = 1
-tbpSim.showPassed = true
+*.node[*].nic.phy.thermalNoise = 1dBm
+*.node[*].nic.phy.useThermalNoise = true
+*.**.coreDebug = false
+*.world.useTorus = false
+*.run = 1
+*.showPassed = true
 
-tbpSim.connectionManager.sendDirect = true
-tbpSim.connectionManager.pMax = 10mW
-tbpSim.connectionManager.sat = -90dBm
-tbpSim.connectionManager.alpha = 3
-tbpSim.connectionManager.carrierFrequency = 868e+6Hz
+*.connectionManager.sendDirect = true
+*.connectionManager.pMax = 10mW
+*.connectionManager.sat = -90dBm
+*.connectionManager.alpha = 3
+*.connectionManager.carrierFrequency = 868e+6Hz
 
-tbpSim.playgroundSizeX = 500m
-tbpSim.playgroundSizeY = 500m
-tbpSim.playgroundSizeZ = 500m
-tbpSim.numHosts = 1
+*.playgroundSizeX = 500m
+*.playgroundSizeY = 500m
+*.playgroundSizeZ = 500m
+*.numHosts = 1
 
-tbpSim.node[*].nic.connectionManagerName = "connectionManager"
+*.node[*].nic.connectionManagerName = "connectionManager"
 
-tbpSim.node[*].nic.phy.usePropagationDelay = false
-tbpSim.node[*].nic.phy.testBaseDecider = false
+*.node[*].nic.phy.usePropagationDelay = false
+*.node[*].nic.phy.testBaseDecider = false
         
-tbpSim.node[*].nic.phy.analogueModels = xmldoc("config.xml")
-tbpSim.node[*].nic.phy.decider = xmldoc("config.xml")
+*.node[*].nic.phy.analogueModels = xmldoc("config.xml")
+*.node[*].nic.phy.decider = xmldoc("config.xml")
 
-tbpSim.node[*].nic.phy.sensitivity = 6dBm
-tbpSim.node[*].nic.phy.maxTXPower = 10.0mW
+*.node[*].nic.phy.sensitivity = 6dBm
+*.node[*].nic.phy.maxTXPower = 10.0mW
 
-tbpSim.node[*].nic.phy.timeRXToTX = 1.0s
-tbpSim.node[*].nic.phy.timeRXToSleep = 1.5s
+*.node[*].nic.phy.timeRXToTX = 1.0s
+*.node[*].nic.phy.timeRXToSleep = 1.5s
 
-tbpSim.node[*].nic.phy.timeTXToRX = 2.0s
-tbpSim.node[*].nic.phy.timeTXToSleep = 2.5s
+*.node[*].nic.phy.timeTXToRX = 2.0s
+*.node[*].nic.phy.timeTXToSleep = 2.5s
 
-tbpSim.node[*].nic.phy.timeSleepToRX = 3.0s
-tbpSim.node[*].nic.phy.timeSleepToTX = 3.5s
-tbpSim.node[*].nic.phy.initialRadioState = 2
+*.node[*].nic.phy.timeSleepToRX = 3.0s
+*.node[*].nic.phy.timeSleepToTX = 3.5s
+*.node[*].nic.phy.initialRadioState = 2
 
-tbpSim.node[*].mobility.initFromDisplayString = false
-tbpSim.node[*].mobility.initialX = 100m
-tbpSim.node[*].mobility.initialY = 100m
-tbpSim.node[*].mobility.initialZ = 100m
-tbpSim.node[*].mobility.coreDebug = false
+*.node[*].mobility.initFromDisplayString = false
+*.node[*].mobility.initialX = 100m
+*.node[*].mobility.initialY = 100m
+*.node[*].mobility.initialZ = 100m
+*.node[*].mobility.speed = 0mps
+*.node[*].mobility.coreDebug = false
 
 [Config Test1]
-tbpSim.run = ${1,2}
-tbpSim.node[*].nic.phy.useThermalNoise = true
+*.run = ${1,2}
+*.node[*].nic.phy.useThermalNoise = true
 
 [Config Test2]
-tbpSim.run = 3
-tbpSim.numHosts = 4
-tbpSim.node[*].nic.phy.useThermalNoise = true
+*.run = 3
+*.numHosts = 4
+*.node[*].nic.phy.useThermalNoise = true
 
 [Config Test6]
-tbpSim.run = 6
-tbpSim.numHosts = 2
-tbpSim.node[*].nic.phy.useThermalNoise = false
+*.run = 6
+*.numHosts = 2
+*.node[*].nic.phy.useThermalNoise = false
 
 [Config Test7]
-tbpSim.run = 7
-tbpSim.numHosts = 4
-tbpSim.node[*].nic.phy.useThermalNoise = false
-tbpSim.node[0..1].nic.phy.protocol = 1
-tbpSim.node[2..3].nic.phy.protocol = 2
+*.run = 7
+*.numHosts = 4
+*.node[*].nic.phy.useThermalNoise = false
+*.node[0..1].nic.phy.protocol = 1
+*.node[2..3].nic.phy.protocol = 2
