--- a/tests/nicTest/omnetpp.ini
+++ b/tests/nicTest/omnetpp.ini
@@ -9,7 +9,7 @@ network = org.mixim.tests.nicTest.NicTest
 
 *.playgroundSizeX = 500m
 *.playgroundSizeY = 500m
-*.playgroundSizeZ = 500m
+*.playgroundSizeZ = 0m
 *.numHosts = 4
 **.coreDebug = false
 
@@ -28,17 +28,14 @@ network = org.mixim.tests.nicTest.NicTest
 *.node[*].mobility.initialZ = 0m
 *.node[0].mobility.initialX = 250m
 *.node[0].mobility.initialY = 200m
-*.node[0].mobility.initialZ = 250m
 *.node[1].mobility.initialX = 150m
 *.node[1].mobility.initialY = 200m
-*.node[1].mobility.initialZ = 250m
 *.node[2].mobility.initialX = 250m
 *.node[2].mobility.initialY = 300m
-*.node[2].mobility.initialZ = 250m
 *.node[3].mobility.initialX = 150m
 *.node[3].mobility.initialY = 300m
-*.node[3].mobility.initialZ = 250m
 *.node[*].netwl.headerLength = 32bit
+*.node[*].mobility.speed = 0mps
 
 [Config Test1]
 description = "Unit Test runs for Nic80211"
@@ -67,14 +64,10 @@ description = "Simulation test runs for Nic80211MultiChannel"
 extends = Test1
 *.node[0].mobility.initialX = 50m
 *.node[0].mobility.initialY = 50m
-*.node[0].mobility.initialZ = 250m
 *.node[1].mobility.initialX = 250m
 *.node[1].mobility.initialY = 50m
-*.node[1].mobility.initialZ = 250m
 *.node[2].mobility.initialX = 250m
-*.node[2].mobility.initialZ = 250m
 *.node[3].mobility.initialX = 450m
-*.node[3].mobility.initialZ = 250m
 
 [Config Test2]
 description = "Simulation test run: two non interfering communicating pairs on same channel"
