--- a/.csettings/org.omnetpp.cdt.gnu.config.release.160423914_org.eclipse.cdt.core.settings
+++ b/.csettings/org.omnetpp.cdt.gnu.config.release.160423914_org.eclipse.cdt.core.settings
@@ -2,7 +2,7 @@
 <?fileVersion 5.0.0?>
 
 <cproject storage_type_id="org.eclipse.cdt.core.XmlProjectDescriptionStorage2">
-	<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="org.omnetpp.cdt.gnu.toolchain.debug.193819325" moduleId="org.eclipse.cdt.core.settings" name="gcc-debug">
+	<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="org.omnetpp.cdt.gnu.config.release.160423914" moduleId="org.eclipse.cdt.core.settings" name="gcc-release">
 		<externalSettings/>
 		<extensions>
 			<extension id="org.eclipse.cdt.core.MachO64" point="org.eclipse.cdt.core.BinaryParser"/>
