- bugfix for calculateRSSIMapping noise mapping (David Eckhoff) - refactored the AnalogueModel initialization, the analogue model parameters will be now read from the parameter map directly in the virtual initFromMap method, added a template method for creation of analogue models (createAnalogModel<_CLASS_NAME_>(params) - refactored the Decider initialization, the decider parameters will be now read from the parameter map directly in the virtual initFromMap method (as in AnalogueModels), added a template method for creation of decider (createDecider<_CLASS_NAME_>(params), this makes the entire initialization step more generic and avoids long parameter lists for the decider (analogue model) constructors - refactored the BaseDecider class, added special handling for collision detections, base decider can handle multiple channels, channel IDLE detection improved - added some new DeciderToPhyInterface functions for more flexibility - UWBIR stuff was adopted to the MiXiM PhyLayer, Decider definitions UWBIRPhy is now derived from PhyLayerBattery and the DeciderUWBIRED is derived from BaseDecider (formaly it was derived from Decider) - adjusted the ieee802154Narrow example - removed the WorldUtility reference from ChannelAccess - adjusted templates for new AnalogueModel/Decider modifications

--- a/examples/ieee802154Narrow/omnetpp.ini
+++ b/examples/ieee802154Narrow/omnetpp.ini
@@ -151,6 +151,7 @@ description = "increasing send rate per host, unbursted, without queue"
 [Config Test2-A]
 description = "one sending host moving towards sink, with mac-acks"
 sim-time-limit = 300s
+#record-eventlog = true
 *.playgroundSizeX = 500m
 *.playgroundSizeY = 500m
 *.numHosts = 2
@@ -161,7 +162,8 @@ sim-time-limit = 300s
 
 *.node[0].netwl.burstSize = 0
 *.node[1].netwl.burstSize = 1
-*.node[1].netwl.destination = 12
+*.node[1].netwl.destination = 0
+#*.node[1].nic.phy.coreDebug = true
 **.netwl.packetsPerPacketTime = 0.25
 
 *.world.bcTraffic = false
@@ -169,7 +171,7 @@ sim-time-limit = 300s
 [Config Test2-B]
 extends = Test2-A
 description = "one sending host moving towards sink, without mac-acks"
-*.node[1].netwl.destination = 12
+*.node[1].netwl.destination = 0
 *.node[*].nic.mac.useMACAcks = false
 *.world.bcTraffic = false
 
@@ -183,8 +185,8 @@ description = "one sending host stationary in range of sink (hidden station), \
 *.node[2].mobility.initialX = 480m
 *.node[2].mobility.initialY = 250m
 *.node[2].netwl.burstSize = 1
-*.node[2].netwl.destination = 13
-*.node[1].netwl.destination = 13
+*.node[2].netwl.destination = 0
+*.node[1].netwl.destination = 0
 
 ######################################################
 # Test 3
