Only some cosmetics and omnetpp.ini adaption to INET definitions

--- a/examples/WSNRouting/omnetpp.ini
+++ b/examples/WSNRouting/omnetpp.ini
@@ -21,6 +21,8 @@ repeat = 5
 **.connectionManager.alpha = 2.0
 **.connectionManager.carrierFrequency = 2.4E+9Hz
 
+**.node[*].mobility.speed = 0
+
 **.node[*].nic.phy.usePropagationDelay = false
 **.node[*].nic.phy.analogueModels = xmldoc("config.xml")
 **.node[*].nic.phy.sensitivity = -100dBm
@@ -122,6 +124,7 @@ description="Wireless sensor network with typical convergecast traffic towards o
 **.node[*].appl.trafficParam = 30 s  # each node sends 1 packet every 30 seconds 
 **.node[*].appl.initializationTime = 30 s
 **.node[*].appl.headerLength = 50 byte
+**.node[*].mobility.speed = 0
 
 [Config flooding]
 description="Wireless sensor network with the sink flooding the network periodically."
@@ -136,6 +139,7 @@ description="Wireless sensor network with the sink flooding the network periodic
 **.node[*].appl.trafficParam = 30 s  # each node sends 1 packet every 30 seconds 
 **.node[*].appl.initializationTime = 10 s
 **.node[*].appl.headerLength = 50 byte
+**.node[*].mobility.speed = 0
 
 [Config probabilisticBcast]
 description="Wireless sensor network using probabilistic broadcast."
