--- a/examples/ieee802154a/omnetpp.ini
+++ b/examples/ieee802154a/omnetpp.ini
@@ -33,6 +33,7 @@ ieee802154a.connectionManager.sat = -100 dBm
 ieee802154a.connectionManager.alpha = 2.0
 ieee802154a.connectionManager.carrierFrequency = 4500e+6 Hz
 
+ieee802154a.node[*].mobility.speed = 0
 
 ieee802154a.node[*].nic.phy.usePropagationDelay = false
 ieee802154a.node[*].nic.phy.thermalNoise = 0 dBm
