--- a/tests/connectionManager/omnetpp.ini
+++ b/tests/connectionManager/omnetpp.ini
@@ -64,10 +64,11 @@ sim-time-limit = 50s
 [Config Test1]
 
 *.world.useTorus = false
-*.world.use2D = true
 *.playgroundSizeX = 900m
 *.playgroundSizeZ = 0
 *.numHosts = 33
+
+*.node[*].mobility.initialZ = 0
 
 # Horizontal aligned node testing
 #BC-Node
@@ -257,9 +258,10 @@ sim-time-limit = 50s
 [Config Test2]
 
 *.world.useTorus = true
-*.world.use2D = true
 *.playgroundSizeZ = 0
 *.numHosts = 33
+
+*.node[*].mobility.initialZ = 0
 
 # Horizontal aligned node testing
 #BC-Node
@@ -449,7 +451,6 @@ sim-time-limit = 50s
 [Config Test3]
 
 *.world.useTorus = false
-*.world.use2D = false
 *.playgroundSizeY = 900m
 *.playgroundSizeX = 800m
 *.playgroundSizeZ = 500m
@@ -892,7 +893,6 @@ sim-time-limit = 50s
 [Config Test4]
 
 *.world.useTorus = true
-*.world.use2D = false
 *.playgroundSizeZ = 500m
 *.numHosts = 68
 
