--- a/examples/ieee802154Narrow/omnetpp.ini
+++ b/examples/ieee802154Narrow/omnetpp.ini
@@ -68,6 +68,8 @@ tkenv-default-config =
 *.node[2].mobility.initialY = 300m
 *.node[2].mobility.initialZ = 100m
 
+*.node[*].mobility.speed = 0
+
 *.node[*].netwl.headerLength = 16bit
 *.node[*].netwl.packetLength = 24880bit
 **.netwl.packetTime = 0.1s
@@ -104,9 +106,10 @@ description = "increasing number of hosts, unbursted, with queue"
 *.playgroundSizeX = 10m
 *.playgroundSizeY = 10m
 *.numHosts = ${2..40 step 2}
-*.node[*].mobility.initialX = 1m/0
-*.node[*].mobility.initialY = 1m/0
-*.node[*].mobility.initialZ = 1m/0
+*.node[*].mobility.initialX = uniform(0m, 10m)
+*.node[*].mobility.initialY = uniform(0m, 10m)
+*.node[*].mobility.initialZ = uniform(0m, 10m)
+*.node[*].mobility.speed = 0
 **.netwl.packetsPerPacketTime = 0.1
 
 [Config Test1-B]
@@ -114,9 +117,10 @@ description = "increasing send rate per host, unbursted, with queue"
 *.playgroundSizeX = 10m
 *.playgroundSizeY = 10m
 *.numHosts = 10
-*.node[*].mobility.initialX = 1m/0
-*.node[*].mobility.initialY = 1m/0
-*.node[*].mobility.initialZ = 1m/0
+*.node[*].mobility.initialX = uniform(0m, 10m)
+*.node[*].mobility.initialY = uniform(0m, 10m)
+*.node[*].mobility.initialZ = uniform(0m, 10m)
+*.node[*].mobility.speed = 0
 **.netwl.packetsPerPacketTime = ${0.02..0.4 step 0.02}
 **.netwl.burstSize = 1
 **.mac.queueLength = 100
@@ -159,6 +163,7 @@ sim-time-limit = 300s
 *.node[0].mobility.initialY = 250m
 *.node[1].mobility.initialX = 350m - ${dist=110..300 step 5}m #${dist=40..160 step 40, 180..220 step 2, 230,240}m
 *.node[1].mobility.initialY = 250m
+*.node[*].mobility.speed = 0
 
 *.node[0].netwl.burstSize = 0
 *.node[1].netwl.burstSize = 1
@@ -203,9 +208,10 @@ sim-time-limit = ${numHosts}s
 *.playgroundSizeX = 10m
 *.playgroundSizeY = 10m
 *.numHosts = ${numHosts=2,4,8,16,32,64,128,256}
-*.node[*].mobility.initialX = 1m/0
-*.node[*].mobility.initialY = 1m/0
-*.node[*].mobility.initialZ = 1m/0
+*.node[*].mobility.initialX = uniform(0m, 10m)
+*.node[*].mobility.initialY = uniform(0m, 10m)
+*.node[*].mobility.initialZ = uniform(0m, 10m)
+*.node[*].mobility.speed = 0
 **.netwl.packetsPerPacketTime = 1/${numHosts}
 *.node[*].nic.mac.macMinBE = 1
 *.node[*].nic.mac.macMaxBE = 8
