small changes in ini files, removed some unused space and non needed ned paths

--- a/examples/analogueModels/omnetpp.ini
+++ b/examples/analogueModels/omnetpp.ini
@@ -14,6 +14,7 @@ network = AnalogueModels
 **.debug = true
 **.netwl.headerLength = 32bit
 **.appl.headerLength = 32bit
+**.appl.burstSize = 32
 **.mac.headerLength = 32bit
 AnalogueModels.playgroundSizeX = 300m
 AnalogueModels.playgroundSizeY = 300m
