* Synchronized to github MiXiM sources * renamed ChannelAccess -> ConnectionManagerAccess; BatterAccess -> MiximBatteryAccess; Radio -> MiximRadio

--- a/examples/WSNRouting/omnetpp.ini
+++ b/examples/WSNRouting/omnetpp.ini
@@ -1,16 +1,15 @@
 [General]
 network = WSNRouting
 sim-time-limit = ${simDuration=2} min
-ned-path = ../../src;..
 tkenv-image-path = ../../images;
 
 repeat = 5
 
 **.coreDebug = false
 **.debug = false
-**.playgroundSizeX = 1000 m
-**.playgroundSizeY = 1000 m
-**.playgroundSizeZ = 100 m
+**.playgroundSizeX = 250 m
+**.playgroundSizeY = 250 m
+**.playgroundSizeZ = 0 m
 **.numHosts = ${numHosts=5,25}
 
 **.world.useTorus = false
@@ -19,9 +18,7 @@ repeat = 5
 **.connectionManager.pMax = 1.1mW
 **.connectionManager.sat = -100dBm
 **.connectionManager.alpha = 2.0
-**.connectionManager.carrierFrequency = 2.4E+9Hz
-
-**.node[*].mobility.speed = 0
+**.connectionManager.carrierFrequency = 2.4GHz
 
 **.node[*].nic.phy.usePropagationDelay = false
 **.node[*].nic.phy.analogueModels = xmldoc("config.xml")
@@ -30,11 +27,14 @@ repeat = 5
 **.node[*].nic.phy.initialRadioState = 0
 **.node[*].nic.phy.useThermalNoise = true
 
+**.mobilityType = "ConstSpeedMobility"
 **.node[*].mobility.initFromDisplayString = false
+
+**.mobility.speed = 2mps
+**.node[*].mobility.initialZ = 0m
 
 **.node[0].mobility.initialX = 10m
 **.node[0].mobility.initialY = 10m
-**.node[*].mobility.initialZ = 100m
 
 **.node[1].mobility.initialX = 10m + 1*${dist=10,20,30,40,50}m
 **.node[1].mobility.initialY = 10m
@@ -48,7 +48,7 @@ repeat = 5
 **.node[4].mobility.initialX = 10m + 4*${dist}m
 **.node[4].mobility.initialY = 10m
 
-**.node[5].mobility.initialX = 10m	
+**.node[5].mobility.initialX = 10m
 **.node[5].mobility.initialY = 10m + 1*${dist}m
 
 **.node[6].mobility.initialX = 10m + 1*${dist}m
@@ -124,7 +124,6 @@ description="Wireless sensor network with typical convergecast traffic towards o
 **.node[*].appl.trafficParam = 30 s  # each node sends 1 packet every 30 seconds 
 **.node[*].appl.initializationTime = 30 s
 **.node[*].appl.headerLength = 50 byte
-**.node[*].mobility.speed = 0
 
 [Config flooding]
 description="Wireless sensor network with the sink flooding the network periodically."
@@ -139,7 +138,6 @@ description="Wireless sensor network with the sink flooding the network periodic
 **.node[*].appl.trafficParam = 30 s  # each node sends 1 packet every 30 seconds 
 **.node[*].appl.initializationTime = 10 s
 **.node[*].appl.headerLength = 50 byte
-**.node[*].mobility.speed = 0
 
 [Config probabilisticBcast]
 description="Wireless sensor network using probabilistic broadcast."
