--- a/examples/lmac/omnetpp.ini
+++ b/examples/lmac/omnetpp.ini
@@ -1,6 +1,5 @@
 [General]
 cmdenv-express-mode = true
-ned-path = ../../src;..
 network = LMACExampleNetwork
 sim-time-limit = 150s
 
@@ -74,6 +73,9 @@ tkenv-image-path = ../../images;
 ################ NETW layer parameters ####################
 
 ################ Mobility parameters #####################
+**.mobilityType = "ConstSpeedMobility"
+**.speed = 2mps
+**.mobility.updateInterval = 0.5 s
 
 **.node[0].mobility.initialX = 150m
 **.node[0].mobility.initialY = 200m
