--- a/examples/ieee802154a/omnetpp.ini
+++ b/examples/ieee802154a/omnetpp.ini
@@ -7,7 +7,6 @@ record-eventlog = true
 **.vector-recording = true
 #**.debug = false
 num-rngs = 88
-ned-path = ../../src;..
 tkenv-image-path = ../../images;
 
 # tkenv-default-run=1
@@ -21,9 +20,9 @@ cmdenv-express-mode = true
 sim-time-limit=1 d # 30s for 10000 packets
 
 ieee802154a.**.coreDebug = false
-ieee802154a.playgroundSizeX = 500 m
-ieee802154a.playgroundSizeY = 500 m 
-ieee802154a.playgroundSizeZ = 500 m
+ieee802154a.playgroundSizeX = 200 m
+ieee802154a.playgroundSizeY = 200 m 
+ieee802154a.playgroundSizeZ = 200 m
 
 ieee802154a.world.useTorus = false
 
@@ -31,9 +30,9 @@ ieee802154a.connectionManager.sendDirect = false
 ieee802154a.connectionManager.pMax = 1000 mW
 ieee802154a.connectionManager.sat = -100 dBm
 ieee802154a.connectionManager.alpha = 2.0
-ieee802154a.connectionManager.carrierFrequency = 4500e+6 Hz
+ieee802154a.connectionManager.carrierFrequency = 4500MHz
 
-ieee802154a.node[*].mobility.speed = 0
+ieee802154a.node[*].mobility.speed = 2mps
 
 ieee802154a.node[*].nic.phy.usePropagationDelay = false
 ieee802154a.node[*].nic.phy.thermalNoise = 0 dBm
@@ -45,7 +44,7 @@ ieee802154a.node[*].nic.phy.timeTXToSleep = 0.000032 s
 ieee802154a.node[*].nic.phy.timeSleepToRX = 0.000103 s
 ieee802154a.node[*].nic.phy.timeSleepToTX = 0.000203 s
 ieee802154a.node[*].nic.phy.maxTXPower = 1 mW # not used currently but required by BasePhyLayer
-ieee802154a.node[*].nic.phy.sensitivity = 0.1 dBm # useless but required by BasePhyLayer
+ieee802154a.node[*].nic.phy.sensitivity = -999999 dBm # disabled sensitivity check
 ieee802154a.node[*].nic.phy.initialRadioState = 0
 
 ***.debug = false
@@ -84,11 +83,14 @@ ieee802154a.node[*].appl.payloadSize = 8 byte
 
 ## Nodes positions
 **.node[*].mobility.initFromDisplayString = false
+**.mobilityType = "ConstSpeedMobility"
+**.mobility.speed = 2mps
 
 ieee802154a.node[0].mobility.initialX = 0m
 ieee802154a.node[0].mobility.initialY = 0m
 ieee802154a.node[0].mobility.initialZ = 0m
-ieee802154a.node[1].mobility.initialY = 0m
+ieee802154a.node[1].mobility.initialX = 20m
+ieee802154a.node[1].mobility.initialY = 10m
 ieee802154a.node[1].mobility.initialZ = 0m
 
 [Config BERDistance]
