--- a/examples/multiConnectionManager/omnetpp.ini
+++ b/examples/multiConnectionManager/omnetpp.ini
@@ -1,5 +1,4 @@
 [General]
-ned-path = ../../src;..
 network = MultiConnectionManager
 
 
@@ -92,6 +91,8 @@ network = MultiConnectionManager
 
 ################ Mobility parameters #####################
 *.GSMNode[*].mobility.initFromDisplayString = false
+**.mobilityType = "ConstSpeedMobility"
+**.mobility.speed = 2mps
 
 *.GSMNode[0].mobility.initialX = 230m
 *.GSMNode[0].mobility.initialY = 220m
